fixup fix(Twitter) correct flex alignment and deemphasizes color

--- a/src/styles/hacks.sass
+++ b/src/styles/hacks.sass
@@ -9,3 +9,8 @@
 	color: #dbdbdb
 	&:hover
 		color: $grey
+
+footer .fore-twitter-icon
+	color: $grey-lighter
+	&:hover
+		color: $primary
